peac_dev/force-app/main/default/objects/Tax_Object__mdt/Tax_Object__mdt.object-meta.xml
<CustomObject>
    <label>Tax Object</label>
    <pluralLabel>Tax Objects</pluralLabel>
</CustomObject>