peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/City_Late_Charge_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Late_Charge_Code_Field__c</fullName>
    <label>City Late Charge Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects26</relationshipLabel>
    <relationshipName>Tax_Objects26</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>