peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/City_Misc_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Misc_Code_Field__c</fullName>
    <label>City Misc Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects23</relationshipLabel>
    <relationshipName>Tax_Objects23</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>