peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/City_Tax_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Tax_Rate_Field__c</fullName>
    <label>City Tax Rate Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects9</relationshipLabel>
    <relationshipName>Tax_Objects9</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>