peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/County_Misc_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>County_Misc_Code_Field__c</fullName>
    <label>County Misc Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects22</relationshipLabel>
    <relationshipName>Tax_Objects22</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>