peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/County_Tax_Rate_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Rate_Amount_Field__c</fullName>
    <label>County Tax Rate Amount Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects5</relationshipLabel>
    <relationshipName>Tax_Objects5</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>