peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/County_Tax_Rate_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Rate_Code_Field__c</fullName>
    <label>County Tax Rate Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects3</relationshipLabel>
    <relationshipName>Tax_Objects3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>