peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Date_Time_Taxes_Calculated_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Taxes_Calculated_Field__c</fullName>
    <label>Date/Time Taxes Calculated Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects20</relationshipLabel>
    <relationshipName>Tax_Objects20</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>