peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Lookup_Field_to_Parent__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_to_Parent__c</fullName>
    <label>Lookup Field to Parent</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects15</relationshipLabel>
    <relationshipName>Tax_Objects15</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>