peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Child_Tax_Objects</relationshipLabel>
    <relationshipName>Child_Tax_Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>