peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/State_Late_Charge_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Late_Charge_Code_Field__c</fullName>
    <label>State Late Charge Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects24</relationshipLabel>
    <relationshipName>Tax_Objects24</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>