peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/State_Tax_Rate_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Rate_Amount_Field__c</fullName>
    <label>State Tax Rate Amount Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects2</relationshipLabel>
    <relationshipName>Tax_Objects2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>