peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Tax_County_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_County_Code_Field__c</fullName>
    <label>Tax County Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects28</relationshipLabel>
    <relationshipName>Tax_Objects28</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>