peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Tax_County_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_County_Field__c</fullName>
    <label>Tax County Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects17</relationshipLabel>
    <relationshipName>Tax_Objects17</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>