peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Tax_State_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_State_Code_Field__c</fullName>
    <label>Tax State Code Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects27</relationshipLabel>
    <relationshipName>Tax_Objects27</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>