peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Tax_State_Field__c.field-meta.xml
<CustomField>
    <fullName>Tax_State_Field__c</fullName>
    <label>Tax State Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects18</relationshipLabel>
    <relationshipName>Tax_Objects18</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>