peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/Taxable_Field__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Field__c</fullName>
    <label>Taxable Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects19</relationshipLabel>
    <relationshipName>Tax_Objects19</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>