peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/TCity_Tax_Rate_Field__c.field-meta.xml
<CustomField>
    <fullName>TCity_Tax_Rate_Field__c</fullName>
    <label>TCity Tax Rate Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects12</relationshipLabel>
    <relationshipName>Tax_Objects12</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>