peac_dev/force-app/main/default/objects/Tax_Object__mdt/fields/TCounty_Tax_Rate_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>TCounty_Tax_Rate_Amount_Field__c</fullName>
    <label>TCounty Tax Rate Amount Field</label>
    <metadataRelationshipControllingField>Tax_Object__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Tax_Objects8</relationshipLabel>
    <relationshipName>Tax_Objects8</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>